ansible/roles/mysql/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: webapp
  labels:
    app.kubernetes.io/instance: mysql
    app.kubernetes.io/name: mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app.kubernetes.io/instance: mysql
    app.kubernetes.io/name: mysql
