ansible/roles/mysql/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-ingress-tcp
  namespace: webapp
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - mysql
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mysql
          port: 3306
